--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
 </nav>
 
 
-<nav style="float: contour; display: block; background-color: white; width: 100%">  
-</nav>
-
 <a href="#contact"><img src="sidewhite.png" style="width: 100%"></a> 
 <a href="#contact"><img src="sidewhite.png" style="width: 100%"></a> 
 <a href="#contact"><img src="sidewhite.png" style="width: 100%"></a> 
@@ -69,7 +66,7 @@
     
   <h1 style="margin-bottom:20; color: darkslategrey; text-align: center; font-size: 47; font-style: bold;" > 3D Renders</h1>
     
-  <a href="#bla"><img src="Street2.png" style="width: 20%;"></a>
+  <a href="#bla"><img src="street2.png" style="width: 20%;"></a>
   <a href="#band"><img src="pool2.png" style="width: 19%;"></a>
   <a href="#tour"><img src="cityd2.png" style="width: 20%;"></a>
   <a href="#contact"><img src="scene2.png" style="width: 19%;"></a> 
