--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@
 <h1 style='background-color: black; color: black'> T </h1>
 
 
-<nav style="float: contour; display: inline-block; background-color: white;">   
+<nav style="float: contour; display: inline; background-color: white;">   
     
   <h1 style="margin-bottom:20; color: darkslategrey; text-align: center; font-size: 47; font-style: bold;" > 2D Digital</h1>
     
-  <a href="#"><img src="kobiax2.png" style="width: 19%;"></a>
-  <a href="#"><img src="city2.png" style="width: 19%;"></a>
-  <a href="#"><img src="mansion2.png" style="width: 19%;"></a>
-  <a href="#"><img src="mas2.png" style="width: 19%;"></a> 
-  <a href="#"><img src="goku2.png" style="width: 19%"></a> 
-  
+  <a href="#"><img src="Pt1.png" style="width: 19%;"></a>
+  <a href="#"><img src="Pt2.png" style="width: 19%;"></a>
+  <a href="#"><img src="Pt3.png" style="width: 19%;"></a>
 </nav>
 
 <h1 style='background-color: black; color: black'> T </h1>
