--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h1 style='background-color: black; color: black'> Kobiax Gallery </h1>
 
 
-<section style="mrgin-top: 3%; background-colour: white>
+<section style="mrgin-top: 3%; background-color: white>
     
   <img src="sonic2.png" style="width: 19%">
   <img src="ship2.png" style="width: 19%">
@@ -31,7 +31,7 @@
 <br>
 
 
-<section style="mrgin-top: 3%; background-colour: white">
+<section style="mrgin-top: 3%; background-color: white">
 
   <img src="kobiax2.png" style="width: 19%;">
   <img src="city2.png" style="width: 19%;"><
@@ -45,7 +45,7 @@
 <br>
 
 
-<section style="mrgin-top: 3%; background-colour: white>
+<section style="mrgin-top: 3%; background-color: white>
     
   <img src="street2.png" style="width: 19%;">
   <img src="pool2.png" style="width: 19%;">
