--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <br>
 
 
-<section>
+<section style="margin-top: 6%">
    <img src="blankblacks.png" style="width: 30%;">
    <img src="gallery.png" style="width: 36%;">
    <img src="blankblacks.png" style="width: 30%">
