--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
 <section style="float: right">
 
-<ifram src="" style = "background-colour: white; display: block">
+<ifram src="3d.html" style = "background-colour: white; display: block">
 
 </iframe>
 
