--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 
     
-<section style="float: right">
+<section style="float: right; margin-top: 17%">
 
 <ifram src="3d.html" style = "background-colour: white; display: block">
 
