--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html style="background-color: black">
 
 
-<body style="background-image: url(kl.png); background-size="70%"; background-position: center>
+<body style="background-image: url(kl.png); background-size="cover"; background-position: center>
 
     
 
