--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
     <section style= "margin-top: 7.9%; margin-right: 4%; float:right">
  
-        <input type="text" style="float: left; background-color: black; border: none; font-size = 200%; color: grey; text-align: center " value="3D">
+        <input type="text" style="float: left; background-color: black; border: none; font-size = 200%; color: grey; text-align: center; width: 30% " value="3D">
         <button  onmouseover="select()" onmouseout="deselect()" id="bt1" onclick="window.open('https://khaledek09.github.io/Kobiax-Gallery', '_blank');" style="font-family: Arial; font-size: 1200%; color: darkslategrey; background-image: url(3d.png); background-color: transparent; background-size: 90%; background-repeat: no-repeat; background-position: center; border: none; color: transparent"> llll </button>
            
             <br>
