--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       
     <section style= "margin-top: 7.9%; margin-right: 4%; float:right">
  
-        <input type="text" style=" margin-top= 4%; background-color: black; border: none; font-size = 400%; font-weight= bold; color: grey; text-align: center; width: 30% " value="3D">
-
+        <input id="3" value="3D" onmousedown="return false" type="text" style="color: lightgrey; width: 30%; background-color: black; border: none; text-align: center; font-size: 700%; margin-top: 3.2%; font-family: Arial">
         <button  onmouseover="select()" onmouseout="deselect()" id="bt1" onclick="window.open('https://khaledek09.github.io/Kobiax-Gallery', '_blank');" style="font-family: Arial; font-size: 1200%; color: darkslategrey; background-image: url(3d.png); background-color: transparent; background-size: 90%; background-repeat: no-repeat; background-position: center; border: none; color: transparent"> llll </button>
 
             <br>
