--- a/3d.html
+++ b/3d.html
@@ -18,10 +18,10 @@
    <body style="background-color: black">
    
      <br>
-     <img src="3d_1.png"> <img src="3d_2.png">
+     <img src="3d_1.png" style="width: 60%"> <img src="3d_2.png" style="width: 60%">
    
      <br>
-     <img src="3d_3.png"> <img src="3d_4.png">
+     <img src="3d_3.png" style="width: 60%"> <img src="3d_4.png" style="width: 60%">
       
       
      <br>
